--- a/main/index.html
+++ b/main/index.html
@@ -17,7 +17,7 @@
     </div>
     <!--alert message-->
     <div class="alert alert-success alert-dismissible fade show" role="alert"><!--fade show is the trasition  -->
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <!--  <button type="button" class="close" data-dismiss="alert">&times;</button> -->
          <h4>welcome user,</h4>
          <p>click the live button  your output will come live you  don't want click the run  button again one click the live button enter the code come fast output if you want disable the live code also you can disable by click again the button </p>
             <hr class="mt-3">
